Update `select` as `listbox` default style for `align-items` and `cursor` https://bugs.webkit.org/show_bug.cgi?id=293566 rdar://152016435
Reviewed by Darin Adler.

This patch updates WebKit user agent stylesheet for `select` as listbox
(multiple) to align with open issue for HTML rendering rules for all widgets [1]
and same time in case of `align-items`, we will now match Gecko / Firefox,
while for `cursor`, WebKit would be first one to adopt this change.

[1] https://github.com/whatwg/html/issues/7050

* Source/WebCore/css/html.css:
(select:is([size], [multiple]), select[size][multiple]):
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/the-select-element/select-as-listbox-default-styles.tentative-expected.txt:

Canonical link: https://commits.webkit.org/295451@main

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -1084,7 +1084,8 @@ select {
 
 #if !(defined(WTF_PLATFORM_IOS_FAMILY) && WTF_PLATFORM_IOS_FAMILY)
 select:is([size], [multiple]), select[size][multiple] {
-    align-items: flex-start;
+    align-items: normal;
+    cursor: auto;
     border: 1px inset gray;
     border-radius: initial;
     white-space: initial;
